# git-credential-msal

./: LICENSE  README.md  README.org  git-credential-msal  pyproject.toml
src/git_credential_msal/: __init__.py  main.py
